--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,8 @@
   text-align: center;
   font-family: monospace;
 }
+.jumbotron h2 {
+  color: brown;
+  font-size: 30px;
+  font-style: oblique;
+}
