--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@
   font-size: 20px;
   font-family:courier;
 }
-.container P {
-  color: darkslategrey;
+.jumbotron P {
+  color: cornflowerblue;
+  font-style: inherit;
+  font-size: 25px;
 }
