--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* css for index.html */
+
+
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 .login-block{
     background: #DE6262;  /* fallback for old browsers */
